# matrix_lib

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  demo.cpp  main  main.cpp
.github/workflows/: linux-build.yml
include/: matrix.hpp
src/: matrix.cpp
test/: test.cpp
